Fixed issue with gap between background and bar disappearing on Firefox mobile by adding a body:before element

--- a/styles/styles-home.css
+++ b/styles/styles-home.css
@@ -53,13 +53,27 @@ p {
 
   
 
-#home-body{
-    height: 100vh;
+body{
     width: 100%;
     opacity: 0;
     transition: opacity 1s;
-    background-attachment: fixed;
-    background-image: linear-gradient(var(--red-main), var(--light-blue-bg), var(--dark-blue-bg));
+    margin-top: var(--border-distance);
+}
+
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: linear-gradient(var(--red-main), var(--light-blue-bg), var(--dark-blue-bg)) no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 #top {
@@ -301,7 +315,7 @@ span.avoidwrap {
 
 
 @media (max-width: 1400px) {
-    #home-body h1 {
+    body h1 {
         font-size: 4vw !important;
     }
 }
@@ -438,7 +452,7 @@ span.avoidwrap {
         --border-distance: 3rem;
     }
 
-    #home-body h1 {
+    body h1 {
         font-size: 2.5rem !important;
     }
     #album-cover div {
@@ -452,7 +466,6 @@ span.avoidwrap {
 
 
 #banner {
-    margin-top: var(--border-distance);
     overflow: hidden;
     height: calc(100vh - 2 * var(--border-distance));
 }
@@ -716,8 +729,3 @@ span.avoidwrap {
 .white-textbox a{
     color: var(--blue-main);
 }
-
-
-
-
-
